--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
       },
       "dependencies": {
             "@tailwindcss/vite": "^4.0.3",
+            "@vercel/analytics": "^1.5.0",
             "motion": "^12.0.11",
             "react": "^18.3.1",
             "react-dom": "^18.3.1",
