--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
       "dependencies": {
             "@tailwindcss/vite": "^4.0.3",
             "@vercel/analytics": "^1.5.0",
+            "@vercel/speed-insights": "^1.2.0",
             "motion": "^12.0.11",
             "react": "^18.3.1",
             "react-dom": "^18.3.1",
