--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
       "homepage": "http://MuhammadAhmad0101.github.io/ModernMusicPlayer",
       "name": "musicapp",
       "private": true,
-      "version": "0.0.0",
+      "version": "1.1.0",
       "type": "module",
       "scripts": {
             "predeploy": "npm run build",
@@ -17,12 +17,13 @@
             "@tailwindcss/vite": "^4.0.3",
             "@vercel/analytics": "^1.5.0",
             "@vercel/speed-insights": "^1.2.0",
+            "framer-motion": "^11.18.2",
             "motion": "^12.0.11",
             "react": "^18.3.1",
             "react-dom": "^18.3.1",
             "react-icons": "^5.4.0",
             "styled-components": "^6.1.15",
-            "tailwindcss": "^4.0.3"
+            "tailwindcss": "^4.1.5"
       },
       "devDependencies": {
             "@eslint/js": "^9.17.0",
