--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
             "preview": "vite preview"
       },
       "dependencies": {
+            "@gsap/react": "^2.1.2",
             "@tailwindcss/vite": "^4.0.3",
             "@vercel/analytics": "^1.5.0",
             "@vercel/speed-insights": "^1.2.0",
             "framer-motion": "^11.18.2",
+            "gsap": "^3.13.0",
             "motion": "^12.0.11",
             "react": "^18.3.1",
             "react-dom": "^18.3.1",
