--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
       },
       "dependencies": {
             "@gsap/react": "^2.1.2",
+            "@react-three/fiber": "^8.18.0",
             "@tailwindcss/vite": "^4.0.3",
             "@vercel/analytics": "^1.5.0",
             "framer-motion": "^11.18.2",
@@ -23,7 +24,8 @@
             "react-dom": "^18.3.1",
             "react-icons": "^5.4.0",
             "styled-components": "^6.1.19",
-            "tailwindcss": "^4.1.5"
+            "tailwindcss": "^4.1.5",
+            "three": "^0.179.1"
       },
       "devDependencies": {
             "@eslint/js": "^9.17.0",
